##Text encoding: utf-8

2010-07-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: export formal charges to OpenBabel. [#30547]
	* libs/gcp/theme.cc: fixed a double free issue. [see #30495]

2010-07-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/view.cc: do not update a NULL widget. [#30495]

2010-07-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.12.3).

2010-07-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: pre release version bump (0.12.2).

2010-07-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: new UI files dirs.
	* libs/gcp/theme.cc: fixed crash when configured default theme does not
	exist.
	* libs/gcu/Makefile.am: rearranged UI files.
	* programs/calc/Makefile.am: ditto.
	* ui/Makefile.am: ditto.
	* ui/calc/Makefile.am: ditto.
	* ui/gchemcalc.ui: ditto.
	* ui/gcuperiodic.ui: ditto.
	* ui/image-resolution.ui: ditto.
	* ui/image-size.ui: ditto.
	* ui/libgcu/Makefile.am: ditto.
	* ui/print-setup.ui: ditto.

2010-06-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/selectiontool.cc: fixed a critical.

2010-06-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/atoms/orbital.cc: fix orbital code when the atom is inside
	a fragment. [#29862]

2010-05-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/crystaldoc.cc: mix rhombohedral with hexagonal to be more or
	less consistent with cif files.
	* libs/gcu/spacegroup.cc: accept negative and decimal values in transforms.
	* plugins/loaders/cif/cif.cc: fixed some more files import.
	* programs/crystal/celldlg.cc: mix rhombohedral with hexagonal to be more or
	less consistent with cif files.

2010-05-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/Makefile.am: fixed build with LDFLAGS="-Wl,--no-undefined".
	[#29966]
	* libs/gcp/Makefile.am: ditto. (patch from Funda Wang)
	* libs/gcu/Makefile.am: ditto. (patch from Funda Wang)